--- a/.storybook/preview-head.html
+++ b/.storybook/preview-head.html
@@ -1,8 +1,4 @@
-<link
-  href="https://fonts.googleapis.com/css?family=Montserrat:300,400,400i,500,600,700,800|Open+Sans:300,400,400i,600,600i,700,800&display=swap"
-  rel="stylesheet">
-<style type="text/css">
-  body {
-    font-family: Montserrat, sans-serif;
-  }
-</style>
+<link href="node_modules/react-datepicker/dist/react-datepicker.css" rel="stylesheet">
+<link href="node_modules/rc-slider/assets/index.css" rel="stylesheet">
+<link href="node_modules/react-phone-input-2/lib/style.css" rel="stylesheet">
+<link href="src/main.css" rel="stylesheet">
